WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104936
Download objects should keep track of their associated DownloadManager object
https://bugs.webkit.org/show_bug.cgi?id=104936
Summary
Download objects should keep track of their associated DownloadManager object
Anders Carlsson
Reported
2012-12-13 11:29:12 PST
Download objects should keep track of their associated DownloadManager object
Attachments
Patch
(5.76 KB, patch)
2012-12-13 11:32 PST
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-12-13 11:32:29 PST
Created
attachment 179307
[details]
Patch
Anders Carlsson
Comment 2
2012-12-13 12:13:03 PST
Committed
r137636
: <
http://trac.webkit.org/changeset/137636
>
Kentaro Hara
Comment 3
2012-12-13 18:16:25 PST
Comment on
attachment 179307
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=179307&action=review
> Source/WebKit2/WebProcess/Downloads/Download.cpp:-49 > - : m_downloadID(downloadID)
What's the rationale for removing this line? See
https://bugs.webkit.org/show_bug.cgi?id=104978
KyungTae Kim
Comment 4
2012-12-13 21:36:47 PST
> Source/WebKit2/WebProcess/Downloads/Download.cpp:-49 > - : m_downloadID(downloadID)
The EFL API test failed due to the uninitialized downloadID: 9/53 Test #9: test_ewk2_download_job [ RUN ] EWK2UnitTestBase.ewk_download ASSERTION FAILED: m_downloads.contains(download->downloadID()) Source/WebKit2/WebProcess/Downloads/DownloadManager.cpp(70) : void WebKit::DownloadManager::downloadFinished(WebKit::Download*)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug