Download objects should keep track of their associated DownloadManager object https://bugs.webkit.org/show_bug.cgi?id=104936

Reviewed by Andreas Kling.

This is the first step towards eliminating DownloadManager::shared.

* WebProcess/Downloads/Download.cpp:
(WebKit::Download::create):
(WebKit::Download::Download):
(WebKit::Download::didFinish):
(WebKit::Download::didFail):
(WebKit::Download::didCancel):
* WebProcess/Downloads/Download.h:
* WebProcess/Downloads/DownloadManager.cpp:
(WebKit::DownloadManager::startDownload):
(WebKit::DownloadManager::convertHandleToDownload):

Canonical link: https://commits.webkit.org/123169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137636 268f45cc-cd09-0410-ab3c-d52691b4dbfc